--- a/style.css
+++ b/style.css
@@ -188,3 +188,14 @@ body
     bottom: 0;
     margin-bottom: 25px;
 }
+
+
+
+/*media queries*/
+
+@media only screen and (max-width: 900px)
+{
+    body
+    {
+    }
+}
